# url-shortener-microservice

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml  docker-build.yml
backend/: package.json
backend/src/: index.ts
config/kratos/: kratos.yml
config/oathkeeper/: access-rules.yml  oathkeeper.yml  rules.json
docs/: ARCHITECTURE.md  RUNNING.md
migrations/clickhouse/: 20250213_01.sql  20250213_02.sql  20250214_03.sql
scripts/: stress_test.py  stress_test_v2.py
services/analytics/: .env.example  .gitignore  Dockerfile  README.md  e2e_test.go  go.mod  go.sum  main.go
services/ip2geo/: Dockerfile  go.mod  go.sum  main.go
services/ip2geo/geoip/: geoip.go
services/ip2geo/protobuf/: ip2geo.proto
services/management/: .env.example  Dockerfile  README.md  package.json
services/management/drizzle/: 0002_aromatic_runaways.sql  0003_rainy_doctor_faustus.sql  0004_curly_hemingway.sql
services/management/src/: app.ts  index.ts  (+4 more)
services/redirect/: .env.example  README.md  package.json
services/security/: .dockerignore  Dockerfile  README.md  pyproject.toml  xgb_phishing_model.pkl
services/security/security/: worker.py
services/security/security/model/: __init__.py  features.py  live_features_dataset.csv  predictor.py  train.py  trainer.py
services/security/security/model/artifacts/: model.joblib  model_features.joblib
services/security/security/worker/: pusher.py  worker.py
web-ui/: .env  .env.example  .gitignore  AGENTS.md  README.md  components.json  package.json  vite.config.ts
web-ui/src/: main.tsx  routeTree.gen.ts
(+41 files in other folders)
