[project]
name = "url-guard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kagglehub[pandas-datasets]>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "torch>=2.10.0",
    "onnxscript>=0.6.2",
    "onnxruntime>=1.17.0",
    "confluent-kafka>=2.3.0",
    "aiokafka>=0.13.0",
    "tldextract>=5.1.0",
    "python-whois>=0.9.4",
    "requests>=2.31.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
]
