[project]
name = "security"
version = "0.1.0"
description = "security service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "aiokafka>=0.10.0",
    "tldextract>=5.1.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
train = [
    "pandas>=2.2.0",
    "kagglehub>=0.1.0",
]
